objects/SBQQ__ProductFeature__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProductFeatureHelp</customHelpPage>
    <description>Feature of a configurable product that consists of one or more options. Features are configured by selecting one or more options.</description>
    <fields>
        <fullName>SBQQ__Category__c</fullName>
        <description>Category of options in this feature. Allows for another level of grouping.</description>
        <inlineHelpText>Assign this feature to a category such that multiple features with related options are grouped together.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKU that&apos;s being configured with this feature.</description>
        <inlineHelpText>SKU that&apos;s being configured with this feature.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be applied to the product selected by all options in this feature.</description>
        <inlineHelpText>Discount schedule to be applied to the product selected by all options in this feature. This overrides discount schedule selected on the product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Product Features</relationshipLabel>
        <relationshipName>ProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__MaxOptionCount__c</fullName>
        <description>Maximum number of options assigned to this feature that must be selected.</description>
        <inlineHelpText>Maximum number of options assigned to this feature that must be selected.</inlineHelpText>
        <label>Max Options</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__MinOptionCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Minimum number of options assigned to this feature that must be selected.</description>
        <inlineHelpText>Minimum number of options assigned to this feature that must be selected.</inlineHelpText>
        <label>Min Options</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Sequential number that determines this feature&apos;s sort order.</description>
        <inlineHelpText>Sequential number that determines this feature&apos;s sort order in the configuration page.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Feature</label>
    <listViews>
        <fullName>Panel1_ProductFeature</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>